--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <style>
       body {
         margin: 0;
+        background-color: black;
       }
       
       iframe {
-        width: 90vw;
-        height: 90vh;
+        width: 100vw;
+        height: 100vh;
       }
     </style>
     
