--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
     </style>
     
-    <link href="bhs.jpg" type="text/css" rel="stylesheet">
+    <link href="bhs.jpg" rel="icon">
   </head>
   <body>
     <center>
